[package]
name = "rusty-radio"
version = "0.1.0"
authors = ["Gerard Krupa <gerard.krupa@capgemini.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-cors = "0.2.0"
lazy_static = "1.4.0"
clokwerk = "0.3.0"
mpd = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "*"
dirs = "2.0.2"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
